--- a/mcborislaw-site/index.html
+++ b/mcborislaw-site/index.html
@@ -1,1 +1,116 @@
-<!-- вставь сюда свой HTML -->
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MC BORISLAW</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: 'Roboto', sans-serif;
+      background: #000;
+      color: #fff;
+      line-height: 1.6;
+    }
+    header {
+      background: url('background-image.jpg') no-repeat center center/cover;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      padding: 2rem;
+    }
+    header h1 {
+      font-size: 4rem;
+      margin-bottom: 1rem;
+    }
+    header p {
+      font-size: 1.2rem;
+    }
+    .btn {
+      margin-top: 2rem;
+      padding: 1rem 2rem;
+      background: #fff;
+      color: #000;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 5px;
+    }
+    .section {
+      padding: 4rem 2rem;
+      max-width: 800px;
+      margin: 0 auto;
+      text-align: center;
+    }
+    .section h2 {
+      font-size: 2.5rem;
+      margin-bottom: 2rem;
+    }
+    .social-links a {
+      margin: 0 1rem;
+      color: #fff;
+      font-size: 2rem;
+      text-decoration: none;
+    }
+    footer {
+      text-align: center;
+      padding: 2rem;
+      background: #111;
+      color: #aaa;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>MC BORISLAW</h1>
+    <p>Рэп с привкусом тьмы. Психоделический реализм. Underground навсегда.</p>
+    <a href="#tour" class="btn">АФИША</a>
+  </header>
+
+  <section class="section" id="about">
+    <h2>Обо мне</h2>
+    <p>MC BORISLAW — артист, чьи тексты разрывают шаблоны и проникают в самые глубины сознания. Микс русской тьмы, сюрреализма и правды улиц. Музыка, которая трогает за живое.</p>
+  </section>
+
+  <section class="section" id="tour">
+    <h2>Ближайшие концерты</h2>
+    <p>📍 10 августа — Москва, клуб «Точка»<br>
+       📍 24 августа — Санкт-Петербург, клуб «Зал ожидания»<br>
+       📍 7 сентября — Казань, «Бар Сцена»</p>
+  </section>
+
+  <section class="section" id="music">
+  <h2>Слушать</h2>
+  <div class="music-links">
+    <a href="https://vk.com/artist/mcborislaw" target="_blank">VK Музыка</a><br>
+    <a href="https://music.yandex.ru/artist/17253908" target="_blank">Yandex Music</a><br>
+    <a href="https://zvuk.com/artist/212055324" target="_blank">Звук</a><br>
+    <a href="https://music.mts.ru/artist/17253908" target="_blank">МТС Музыка</a><br>
+    <a href="https://open.spotify.com/artist/1XA1UywZtJxmZfM9sSogCI" target="_blank">Spotify</a><br>
+    <a href="https://music.apple.com/us/artist/mc-borislaw/1640029147" target="_blank">Apple Music</a>
+  </div>
+</section>
+
+  <section class="section" id="contacts">
+    <h2>Контакты</h2>
+    <p>Для бронирования концертов и сотрудничества: <br>
+      <a href="mailto:booking@mcborislaw.com">booking@mcborislaw.com</a></p>
+    <div class="social-links">
+      <a href="https://instagram.com">📷</a>
+      <a href="https://t.me">📨</a>
+      <a href="https://vk.com">🖤</a>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 MC BORISLAW. Все права защищены.</p>
+  </footer>
+</body>
+</html>
