--- a/mcborislaw-site/index.html
+++ b/mcborislaw-site/index.html
@@ -18,7 +18,7 @@
       line-height: 1.6;
     }
     header {
-      background: url('background-image.jpg') no-repeat center center/cover;
+      background: url('images/background.jpg') no-repeat center center/cover;
       height: 100vh;
       display: flex;
       flex-direction: column;
