--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
 
   <section class="section" id="contacts">
     <h2>Контакты</h2>
-    <p>Менеджер артиста: <a href="mailto:zoccolov@vk.com">zoccolov@vk.com</a></p>
+    <p>Менеджер артиста: <a href="mailto:main@mcborislaw.ru">main@mcborislaw.ru</a></p>
+    
     <div class="social-links">
       <a href="https://www.instagram.com/borislaw_kun/">Instagram</a> |
       <a href="https://t.me/contrkult">Telegram</a> |
